[CYB-252] support ipinfo company database enrichment